<?xml version="1.0"?>
<package format="3">
    <name>faster_lio</name>
    <version>0.0.0</version>

    <description>
        FasterLIO is developed from FastLIO2, see related paper: Chunge Bai et al. Faster-LIO: Lightweight Tightly
        Coupled Lidar-inertial Odometry
        using Parallel Sparse Incremental Voxels, IEEE RA-Letters, 2022
    </description>

    <maintainer email="gao.xiang.thu@gmail.com">gaoxiang</maintainer>

    <license>BSD</license>

    <author email="gao.xiang.thu@gmail.com">Gao Xiang</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>common_interfaces</depend>
    <depend>tf2</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>livox_ros_driver2</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
